--- a/README
+++ b/README
@@ -7,6 +7,6 @@ The session was executed on a fresh 14.04 Ubuntu cloud instance.
 The only prep done ahead of time was:
  sudo apt-get update && sudo apt-get install --assume-yes git bzr ubuntu-cloudimage-keyring
  git clone https://github.com/smoser/talk-simplestreams.git talk
- bzr branch lp:simplestreams  talk/simplestreams
+ git clone https://git.launchpad.net/simplestreams
  export PATH=$PWD/talk/bin:$PWD/talk/simplestreams/tools:$PATH
  cd talk
