Added reference in README file to orignal source and changed git URL.

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This is a fork from https://github.com/smoser/talk-simplestreams.git
+
 This is prepared for a 2014-06-11 UDS session on Simplestreams
 entitlted 'Simplestreams Tutorial'
   http://summit.ubuntu.com/uos-1406/meeting/22279/simplestreams-tutorial/
@@ -6,7 +8,7 @@ The session was executed on a fresh 14.04 Ubuntu cloud instance.
 
 The only prep done ahead of time was:
  sudo apt-get update && sudo apt-get install --assume-yes git bzr ubuntu-cloudimage-keyring
- git clone https://github.com/smoser/talk-simplestreams.git talk
+ git clone https://github.com/tsanghan/talk-simplestreams.git talk
  git clone https://git.launchpad.net/simplestreams
  export PATH=$PWD/talk/bin:$PWD/talk/simplestreams/tools:$PATH
  cd talk
